--- a/styles/index.css
+++ b/styles/index.css
@@ -2196,3 +2196,73 @@ body
   align-items: center;
   width: 100%;
 }
+
+
+.cta-wrapper {
+    display: flex;
+    justify-content: flex-end; /* Alinear el contenedor al lado derecho */
+    width: 100%; /* Ancho completo del contenedor padre */
+}
+
+.cta-container {
+    background-color: #4D869C; /* Fondo negro */
+    color: #fff; /* Texto blanco */
+    padding: 100px 50px; /* Ajuste de padding */
+    text-align: left; /* Alineación del texto a la izquierda */
+    border-radius: 20px; /* Borde redondeado */
+    position: relative;
+    width: 60%; /* Ancho del contenedor */
+    margin: 50px; /* Margen para separación */
+}
+.cta-container h1 {
+    color: #fff;
+    font-size: 3rem; /* Tamaño de fuente más grande */
+    margin-bottom: 20px;
+}
+.cta-container p {
+    font-size: 1.5rem; /* Tamaño de fuente más grande */
+    margin-bottom: 40px;
+    max-width: 600px; /* Máximo ancho del párrafo */
+}
+.cta-container a {
+    display: inline-block;
+    padding: 10px 20px; /* Ajuste de padding */
+    font-size: 2rem; /* Tamaño de fuente más grande */
+    color: #fff; /* Color blanco */
+    background-color: transparent;
+    text-decoration: none;
+    border-radius: 5px;
+    transition: background-color 0.3s, color 0.3s;
+}
+.cta-container .arrow {
+    font-size: 2.5rem; /* Tamaño de fuente más grande */
+    color: #fff; /* Color blanco */
+}
+.cta-container a:hover {
+    color: #ddd; /* Texto gris al pasar el ratón */
+}
+
+
+/* Estilos para dispositivos móviles */
+@media (max-width: 768px) {
+    .cta-wrapper {
+        justify-content: center; /* Centrar el contenedor en móviles */
+    }
+    .cta-container {
+        width: 90%; /* Ancho casi completo en móviles */
+        padding: 50px 20px; /* Reducir padding en móviles */
+        margin: 20px; /* Reducir margen en móviles */
+    }
+    .cta-container h1 {
+        font-size: 2rem; /* Reducir tamaño de fuente en móviles */
+    }
+    .cta-container p {
+        font-size: 1rem; /* Reducir tamaño de fuente en móviles */
+    }
+    .cta-container a {
+        font-size: 1.5rem; /* Reducir tamaño de fuente en móviles */
+    }
+    .cta-container .arrow {
+        font-size: 2rem; /* Reducir tamaño de fuente en móviles */
+    }
+}
