--- a/styles/styles.css
+++ b/styles/styles.css
@@ -693,7 +693,7 @@ label {
   font-size: 1.4rem;
   font-weight: 500;
 }
-
+/* animacion faqs */
 .faq-accordion {
   color: white;
   background-color: #4d869c;
