--- a/styles/pagina.css
+++ b/styles/pagina.css
@@ -627,33 +627,50 @@ label {
   right: 0;
   overflow: hidden;
 }
+/* animacion faqs */
 .faq-accordion {
-  color: #fff;
+  color: white;
   background-color: #4d869c;
   border-radius: 0.6rem;
   flex-direction: column;
   justify-content: flex-start;
   align-items: stretch;
 }
+
 .icono-faq {
   font-size: 1.4rem;
   font-weight: 500;
 }
+
 .faq-question {
   cursor: pointer;
   justify-content: space-between;
   align-items: center;
-  padding: 0.2rem 1rem;
+  padding: 0.8rem 2rem;
   display: flex;
 }
+
 .faq-answer {
   padding-left: 2rem;
   padding-right: 2rem;
-  max-height: 0;
+  max-height: 0; /* Inicialmente oculto */
   overflow: hidden;
-  opacity: 0;
-  transition: max-height 1s, opacity 1s;
-  display: block;
+  opacity: 0; /* Inicialmente transparente */
+  transition: max-height 1s ease, opacity 1s ease; /* Transición suave */
+  display: block; /* Asegura que el contenido sea bloqueado para aplicar la transición */
+}
+
+.showAnswer {
+  max-height: 200px; /* Ajusta según el tamaño máximo esperado */
+  opacity: 1; /* Visible */
+}
+.faq-collection-list {
+  grid-column-gap: 1rem;
+  grid-row-gap: 1rem;
+  grid-template-rows: auto auto;
+  grid-template-columns: 1fr;
+  grid-auto-columns: 1fr;
+  display: grid;
 }
 .agenda-background-overlay {
   width: 100%;
