--- a/styles/index.css
+++ b/styles/index.css
@@ -214,7 +214,7 @@ h3 {
 }
 .navbar-link:hover,
 a:hover {
-  color: #1E3A44;
+  color: #1e3a44;
 }
 label {
   margin-bottom: 0.25rem;
@@ -319,7 +319,7 @@ label {
 }
 .button {
   color: #fff;
-  background-color: #1E3A44;
+  background-color: #1e3a44;
   border-radius: 0.6rem;
   padding: 0.75rem 2rem;
   font-weight: 500;
@@ -332,7 +332,7 @@ label {
 }
 .button:hover {
   color: #fff;
-  background-color: #4D869C;
+  background-color: #4d869c;
   overflow: visible;
 }
 .text-size-medium {
@@ -627,7 +627,7 @@ label {
 /* animacion faqs */
 .faq-accordion {
   color: white;
-  background-color: #1E3A44;
+  background-color: #1e3a44;
   border-radius: 0.6rem;
   flex-direction: column;
   justify-content: flex-start;
@@ -684,7 +684,7 @@ label {
   right: 0;
 }
 .subheading {
-  color: #1E3A44;
+  color: #1e3a44;
   font-size: 1.125rem;
   font-weight: 500;
 }
@@ -1330,7 +1330,7 @@ form {
 button {
   overflow: visible;
   text-transform: none;
-  background: #1E3A44;
+  background: #1e3a44;
   color: #fff;
   border-radius: 4px;
   border: 0;
@@ -1392,7 +1392,7 @@ button:disabled {
 .spinner:after {
   width: 10.4px;
   height: 10.2px;
-  background: #1E3A44;
+  background: #1e3a44;
   border-radius: 0 10.2px 10.2px 0;
   top: -0.1px;
   left: 10.2px;
@@ -1465,7 +1465,7 @@ button:disabled {
   position: relative;
   width: 90px;
   height: 90px;
-  background: conic-gradient(#1E3A44 0deg 0deg, #e6e6e6 0deg);
+  background: conic-gradient(#1e3a44 0deg 0deg, #e6e6e6 0deg);
 }
 .inside-circle {
   position: absolute;
@@ -1587,7 +1587,7 @@ button:disabled {
 }
 @media (min-width: 769px) and (max-width: 814px) {
   .speaker-item {
-    height: 430px;
+    height: 470px;
   }
   .title-dr {
     padding: 5px;
@@ -1599,8 +1599,9 @@ button:disabled {
   }
 }
 @media (min-width: 815px) and (max-width: 1024px) {
+  .dr-fermin,
   .speaker-item {
-    height: 470px;
+    height: 500px;
   }
 }
 @media (min-width: 1025px) and (max-width: 1199px) {
@@ -1624,7 +1625,7 @@ button:disabled {
   }
   .dr-fermin,
   .speaker-item {
-    height: 500px;
+    height: 560px;
   }
 }
 @media (max-width: 610px) {
@@ -1722,7 +1723,7 @@ body
   border-radius: 5px;
 }
 .ticket-option:hover {
-  border-color: #1E3A44;
+  border-color: #1e3a44;
 }
 .ticket-option .ticket-content {
   display: flex;
@@ -1912,7 +1913,7 @@ body
 }
 .nav-button:hover {
   color: #fff;
-  background-color: #1E3A44;
+  background-color: #1e3a44;
 }
 @media (min-width: 400px) {
   .slide img {
@@ -1988,7 +1989,7 @@ body
   left: 33.3%;
   transform: translate(-50%, -50%);
   background: #fff;
-  border: 2px solid #1E3A44;
+  border: 2px solid #1e3a44;
   border-radius: 5px;
 }
 .pagos {
@@ -2073,7 +2074,7 @@ body
 }
 
 .ticket-option.selected {
-  background-color: #1E3A44;
+  background-color: #1e3a44;
 }
 
 .ticket-option.selected .ticket-text,
@@ -2229,7 +2230,7 @@ body
 }
 
 .cta-container {
-  background-color: #1E3A44; /* Fondo negro */
+  background-color: #1e3a44; /* Fondo negro */
   color: #fff; /* Texto blanco */
   padding: 100px 50px; /* Ajuste de padding */
   text-align: left; /* Alineación del texto a la izquierda */
