--- a/styles/index.css
+++ b/styles/index.css
@@ -1643,7 +1643,6 @@ button:disabled {
 }
 .organizadores2 {
   display: flex;
-  flex-wrap: wrap;
   justify-content: center;
   gap: 20px;
   width: 100%;
@@ -1659,9 +1658,86 @@ button:disabled {
   max-width: 220px;
 }
 .organizadores2 .organizadoresImg2:nth-child(3) {
-  width: 100%;
+  height: 140px;
+}
+#section-home-partner
+  > div
+  > div
+  > div
+  > div.organizadores2
+  > div:nth-child(2)
+  > div,
+#section-home-partner > div > div > div > div.organizadores2 > div:nth-child(1),
+#section-home-partner
+  > div
+  > div
+  > div
+  > div.organizadores2
+  > div:nth-child(3)
+  > div {
+  height: 225px;
+}
+.organizadores2 .organizadoresImg2:nth-child(1) {
   display: flex;
   justify-content: center;
+}
+#section-home-partner
+  > div
+  > div
+  > div
+  > div.organizadores2
+  > div:nth-child(1)
+  > div
+  > img {
+  height: 140px;
+  padding: 40px 0;
+}
+
+#section-home-partner
+  > div
+  > div
+  > div
+  > div.organizadores2
+  > div:nth-child(1)
+  > div
+  > img,
+#section-home-partner
+  > div
+  > div
+  > div
+  > div.organizadores2
+  > div:nth-child(2)
+  > div
+  > img {
+  height: 140px;
+}
+@media (max-width: 700px) {
+  .organizadores2 {
+    flex-direction: column;
+    column-gap: 30px;
+  }
+  #section-home-partner
+    > div
+    > div
+    > div
+    > div.organizadores2
+    > div:nth-child(2)
+    > div,
+  #section-home-partner
+    > div
+    > div
+    > div
+    > div.organizadores2
+    > div:nth-child(1),
+  #section-home-partner
+    > div
+    > div
+    > div
+    > div.organizadores2
+    > div:nth-child(3)
+    > div {
+    height: 200px;
+  }
 }
 @media (max-width: 992px) {
   .organizadoresImg2 {
