--- a/styles/custom.css
+++ b/styles/custom.css
@@ -428,9 +428,24 @@ label {
   display: flex;
 }
 .header-infos-item {
-  text-transform: uppercase;
   padding-left: 1.5rem;
   padding-right: 1.5rem;
+  font-weight: 500;
+}
+body
+  > div
+  > div
+  > main
+  > section.section-home-header
+  > div.padding-global
+  > div
+  > div
+  > div.home-header-component
+  > div
+  > div
+  > div:nth-child(1)
+  > div.header-infos-wrapper.justify-content-md-between.mt-5
+  > div.header-infos-iteml {
   font-weight: 500;
 }
 .header-infos-item.no-border {
@@ -530,7 +545,7 @@ label {
 }
 .navbar-logo {
   color: #1e3a44;
-  font-weight: 500;
+  font-weight: 400;
 }
 .navbar-logo-link {
   text-decoration: none;
