--- a/styles/styles.css
+++ b/styles/styles.css
@@ -498,7 +498,7 @@ label {
   object-fit: cover;
   border-radius: 0.6rem;
 }
-.partner-list {
+/* .partner-list {
   grid-column-gap: 1rem;
   grid-row-gap: 1rem;
   grid-template-rows: auto;
@@ -512,7 +512,7 @@ label {
   align-items: flex-start;
   padding: 2rem 1rem;
   display: flex;
-}
+} */
 
 
 .blurred-circle {
