--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2414,19 +2414,22 @@ body
 .footer-social-list {
   display: inline-block;
 }
-
- /* styles.css */
- .carousel-container {
+/* styles.css */
+.carousel-container {
   width: 100%;
+  overflow: hidden;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .partner-carousel {
   display: flex;
-  width: 100%; /* Duplica el ancho para el efecto de bucle */
-  animation: 35s slide infinite linear;
+  justify-content: center;
+  align-items: center;
 }
 
 .partner-carousel img {
@@ -2435,7 +2438,6 @@ body
 
 .partner-item {
   flex: 0 0 auto;
-  margin-right: 10px; /* Ajusta el margen según sea necesario */
 }
 
 .partner-logo {
@@ -2444,59 +2446,15 @@ body
   background: white;
   white-space: nowrap;
   position: relative;
-  width: 100px;
+  width: 150px;
 }
 
 .partner-logo:before,
 .partner-logo:after {
-  position: absolute;
-  top: 0;
-  width: 250px;
-  height: 100%;
-  content: "";
-  z-index: 2;
-}
-
-.partner-logo:before {
-  left: 0;
-  background: linear-gradient(to left, rgba(255, 255, 255, 0), white);
-}
-
-.partner-logo:after {
-  right: 0;
-  background: linear-gradient(to right, rgba(255, 255, 255, 0), white);
-}
-
-.partner-logo:hover .partner-carousel {
-  animation-play-state: paused;
-}
-
-@keyframes slide {
-  0% {
-      transform: translateX(0);
-  }
-  100% {
-      transform: translateX(-100%);
-  }
+  display: none;
 }
 
 
-/* Media Queries para móviles */
-@media (max-width: 1024px) {
-  .partner-carousel {
-      width: 100%; /* Restablece el ancho en móviles */
-      animation: scroll-mobile 30s linear infinite;
-  }
-
-  @keyframes scroll-mobile {
-      0% {
-          transform: translateX(0);
-      }
-      100% {
-          transform: translateX(-100%);
-      }
-  }
-}
 
 body
   > div
