--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2454,8 +2454,6 @@ body
   display: none;
 }
 
-
-
 body
   > div
   > div
@@ -2466,4 +2464,44 @@ body
   > div.footer-bottom-wrapper2
   > div.disclaimer {
   text-align: start;
+}
+
+/* slider patrocinadores */
+
+.slider-patrocinadores {
+  position: relative;
+  width: 100%;
+  max-height: 200px;
+  overflow: hidden;
+}
+
+.slider-patrocinadores__wrapper {
+  display: flex;
+  gap: 30px;
+  width: calc(
+    100% * 10
+  ); /* Ajustar el ancho para acomodar todos los elementos duplicados */
+  animation: scroll 80s linear infinite;
+}
+
+@keyframes scroll {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(calc(-100% / 2));
+  } /* Moverse a la mitad del contenedor */
+}
+
+.slider-patrocinadores__slide {
+  min-width: calc(100% / 50); /* Ajustar el ancho de cada slide */
+  transition: transform 1s ease-in-out;
+}
+
+.slider-patrocinadores__slide img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+  border: 10px solid #f4f4f6;
+  border-radius: 10px;
 }
