--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2497,8 +2497,7 @@ body
 }
 
 .slider-patrocinadores__slide img {
-  width: 100%;
-  height: 100%;
+  width: 150px;
   object-fit: contain;
   border: 10px solid #f4f4f6;
   border-radius: 10px;
