--- a/styles/index.css
+++ b/styles/index.css
@@ -692,7 +692,7 @@ body
   height: 100%;
   background-image: linear-gradient(
     rgba(132, 230, 248, 0),
-    rgba(77, 134, 156, 0.9)
+    rgba(30, 58, 68, 0.9)
   );
   border-radius: 0.6rem;
   position: absolute;
@@ -2245,6 +2245,7 @@ body
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 20px;
+  margin-top: 20px;
 }
 .disclaimer {
   text-align: center;
@@ -2467,18 +2468,20 @@ body
 }
 
 /* slider patrocinadores */
-
 .slider-patrocinadores {
+  border: 10px solid #f4f4f6;
+  border-radius: 0.6rem;
   position: relative;
-  width: 100%;
-  max-height: 200px;
+  /* width: 100%; */
   overflow: hidden;
+  display: flex;
+  align-items: center; /* Centrar verticalmente */
 }
 
 .slider-patrocinadores__wrapper {
   display: flex;
-  gap: 30px;
-  width: calc(100% * 10); /*e lementos duplicados */
+  gap: 100px;
+  width: calc(100% * 10); /* elementos duplicados */
   animation: scroll 80s linear infinite;
 }
 
@@ -2494,12 +2497,13 @@ body
 .slider-patrocinadores__slide {
   min-width: calc(100% / 50); /* ancho de cada slider */
   transition: transform 1s ease-in-out;
+  display: flex;
+  align-items: center; /* Centrar verticalmente dentro del slide */ 
 }
 
 .slider-patrocinadores__slide img {
   vertical-align: center;
   width: 150px;
   object-fit: contain;
-  border: 10px solid #f4f4f6;
   border-radius: 10px;
 }
