--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,4 +1,3 @@
-
 .w-inline-block,
 img {
   max-width: 100%;
@@ -1411,7 +1410,7 @@ button:disabled {
 .spinner:after {
   width: 10.4px;
   height: 10.2px;
-  background: #fff  ;
+  background: #fff;
   border-radius: 0 10.2px 10.2px 0;
   top: -0.1px;
   left: 10.2px;
@@ -1448,7 +1447,7 @@ button:disabled {
 }
 .modal-content {
   color: #fff;
-  background-color: #0D1E24;
+  background-color: #0d1e24;
   margin: 0 auto;
   min-width: fit-content;
   left: 50%;
@@ -1867,8 +1866,6 @@ body
   cursor: pointer;
 }
 
-
-
 #registroForm .radio {
   display: flex;
   align-items: center;
@@ -1909,7 +1906,7 @@ body
   color: red;
 }
 #pago-section {
-  background-color: #0D1E24;
+  background-color: #0d1e24;
   margin-top: 40px;
   padding: 20px;
   border-radius: 5px;
@@ -1944,7 +1941,7 @@ body
   margin-top: 20px;
 }
 
-#submit-payment{
+#submit-payment {
   border-color: #fff;
 }
 
@@ -2117,7 +2114,7 @@ body
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: #0D1E24;
+  background-color: #0d1e24;
   overflow-y: auto;
   transform: translateY(-100%);
   transition: transform 1s ease-in-out;
@@ -2507,7 +2504,7 @@ body
   display: flex;
   gap: 200px;
   width: calc(100% * 10); /* elementos duplicados */
-  animation: scroll 80s linear infinite;
+  animation: scroll 50s linear infinite;
 }
 
 @keyframes scroll {
@@ -2523,7 +2520,7 @@ body
   min-width: calc(100% / 50); /* ancho de cada slider */
   transition: transform 1s ease-in-out;
   display: flex;
-  align-items: center; /* Centrar verticalmente dentro del slide */ 
+  align-items: center; /* Centrar verticalmente dentro del slide */
 }
 
 .slider-patrocinadores__slide img {
@@ -2533,7 +2530,7 @@ body
   border-radius: 10px; */
 }
 
-.boton{
+.boton {
   border: 2px solid black;
   background-color: white;
   color: #1e3a44;
@@ -2542,12 +2539,12 @@ body
   cursor: pointer;
 }
 
-.pago{
+.pago {
   border-color: #fff;
   color: #1e3a44;
 }
 
-.pago:hover{
+.pago:hover {
   background-color: transparent;
   color: #fff;
 }
