--- a/styles/pagina.css
+++ b/styles/pagina.css
@@ -1464,6 +1464,7 @@ button:disabled {
     left: 0;
     width: 50%;
     transform: translateY(20%) translateX(-40%);
+    transition: transform 3s ease-in-out;
   }
   .navbar-toggler-icon {
     float: none;
@@ -2425,4 +2426,51 @@ body
   > div.footer-bottom-wrapper2
   > div.disclaimer {
   text-align: start;
+}
+
+.header {
+  background-color: #f8f9fa;
+  padding: 10px;
+  box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+}
+
+.navbar-toggler {
+  background: none;
+  border: none;
+  font-size: 1.5em;
+  cursor: pointer;
+}
+
+.navbar-collapse {
+  overflow: hidden;
+  max-height: 0;
+  transition: max-height 3s ease-in-out;
+}
+
+.navbar-collapse.show {
+  max-height: 1000px; /* Asegúrate de que sea suficiente para mostrar todo el contenido */
+}
+
+.navbar-nav {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.nav-item {
+  margin: 10px 0;
+}
+
+.nav-link {
+  text-decoration: none;
+  color: #000;
+  font-size: 1.25em;
+}
+
+.nav-link:hover {
+  text-decoration: underline;
+}
+
+.botonHeader {
+  margin-left: 20px;
 }
