--- a/styles/pagina.css
+++ b/styles/pagina.css
@@ -132,7 +132,7 @@ body {
 }
 button,
 html input[type="button"] {
-  --webkit-appearance: button;
+  -webkit-appearance: button;
   cursor: pointer;
 }
 button::-moz-focus-inner,
@@ -485,8 +485,8 @@ body
   display: flex;
 }
 .partner-logo {
-  max-height: 2rem;
-} */
+  max-height: 2rem; */
+/* } */
 .blurred-circle {
   z-index: -2;
   width: 50vw;
@@ -710,7 +710,7 @@ body
   grid-column-gap: 0.75rem;
   grid-row-gap: 0;
   grid-template-rows: auto;
-  grid-template-columns: max-tent;
+  grid-template-columns: max-content;
   grid-auto-columns: max-content;
   align-items: start;
   justify-items: start;
@@ -1379,7 +1379,7 @@ button:disabled {
   box-shadow: none;
 }
 .spinner {
-  color: #fff;
+  color: #1e3a44;
   font-size: 22px;
   text-indent: -99999px;
   position: relative;
@@ -1410,7 +1410,7 @@ button:disabled {
 .spinner:after {
   width: 10.4px;
   height: 10.2px;
-  background: #1e3a44;
+  background: #fff;
   border-radius: 0 10.2px 10.2px 0;
   top: -0.1px;
   left: 10.2px;
@@ -1446,6 +1446,8 @@ button:disabled {
   }
 }
 .modal-content {
+  color: #fff;
+  background-color: #0d1e24;
   margin: 0 auto;
   min-width: fit-content;
   left: 50%;
@@ -1464,14 +1466,58 @@ button:disabled {
     left: 0;
     width: 50%;
     transform: translateY(20%) translateX(-40%);
-    transition: transform 3s ease-in-out;
   }
   .navbar-toggler-icon {
     float: none;
     margin: 0 auto;
   }
+
   .navbar-collapse {
+    overflow: hidden;
+    max-height: 0;
+    transition: max-height 2s ease-in-out;
     padding-bottom: 20px;
+  }
+
+  .header {
+    background-color: #f8f9fa;
+    padding: 10px;
+    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+  }
+  
+  .navbar-toggler {
+    background: none;
+    border: none;
+    font-size: 1.5em;
+    cursor: pointer;
+  }
+  
+  .navbar-collapse.show {
+    transition: max-height 2s ease-in-out;
+  }
+  
+  .navbar-nav {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+  }
+  
+  .nav-item {
+    margin: 10px 0;
+  }
+  
+  .nav-link {
+    text-decoration: none;
+    color: #000;
+    font-size: 1.25em;
+  }
+  
+  .nav-link:hover {
+    text-decoration: underline;
+  }
+  
+  .botonHeader {
+    margin-left: 20px;
   }
 }
 .countdown-container {
@@ -1818,7 +1864,7 @@ body
   border-radius: 5px;
 }
 .ticket-option:hover {
-  border-color: #1e3a44;
+  border-color: #fff;
 }
 .ticket-option .ticket-content {
   display: flex;
@@ -1826,18 +1872,20 @@ body
   align-items: center;
 }
 .ticket-text {
+  color: #fff;
   font-size: 18px;
   font-weight: 700;
   margin-bottom: 10px;
 }
 .ticket-price {
   font-size: 16px;
-  color: #666;
+  color: #fff;
 }
 #registro-section {
   padding: 20px;
 }
 #registro-section h3 {
+  color: #fff;
   text-align: center;
   margin-bottom: 20px;
 }
@@ -1847,19 +1895,22 @@ body
   gap: 15px;
 }
 #registroForm .form-label {
+  color: #fff;
   font-weight: 700;
   text-align: start;
   font-size: 1rem;
 }
 #pago-section #submit-payment,
 #registroForm #submit {
+  background-color: #fff;
   display: flex;
-  color: #fff;
+  color: #1e3a44;
   border: none;
   padding: 10px 20px;
   transition: background-color 0.3s;
   cursor: pointer;
 }
+
 #registroForm .radio {
   display: flex;
   align-items: center;
@@ -1900,12 +1951,14 @@ body
   color: red;
 }
 #pago-section {
+  background-color: #0d1e24;
   margin-top: 40px;
   padding: 20px;
   border-radius: 5px;
 }
 #pago-section .modal-header {
   align-items: center;
+  color: #fff;
 }
 #pago-section .modal-title {
   font-size: 1.25rem;
@@ -1914,6 +1967,7 @@ body
 }
 #pago-section #payment-element,
 #pago-section .modal-body {
+  color: #fff;
   margin-top: 20px;
 }
 #pago-section .ticket-option input {
@@ -1925,10 +1979,21 @@ body
   width: 100%;
 }
 #pago-section #submit-payment {
+  border-color: #fff;
   align-items: center;
   justify-content: center;
   border-radius: 5px;
   margin-top: 20px;
+}
+
+#submit-payment {
+  border-color: #fff;
+}
+
+#pago-section #submit-payment:hover {
+  background-color: transparent;
+  color: #fff;
+  border: #fff;
 }
 .slider,
 .slider-container {
@@ -2094,13 +2159,14 @@ body
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: #fff;
+  background-color: #0d1e24;
   overflow-y: auto;
   transform: translateY(-100%);
   transition: transform 1s ease-in-out;
   opacity: 0;
 }
 #success-section {
+  color: #fff;
   flex-direction: column;
   align-items: center;
   justify-content: center;
@@ -2163,18 +2229,18 @@ body
   position: absolute;
   top: 10px;
   font-size: 24px;
-  border-color: #000;
+  border-color: #fff;
   background: none;
-  color: #000;
+  color: #fff;
 }
 
 .ticket-option.selected {
-  background-color: #1e3a44;
+  background-color: #fff;
 }
 
 .ticket-option.selected .ticket-text,
 .ticket-option.selected .ticket-price {
-  color: #fff;
+  color: #1e3a44;
 }
 
 @media (max-width: 550px) {
@@ -2246,6 +2312,7 @@ body
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 20px;
+  margin-top: 20px;
 }
 .disclaimer {
   text-align: center;
@@ -2415,6 +2482,45 @@ body
 .footer-social-list {
   display: inline-block;
 }
+/* styles.css */
+.carousel-container {
+  width: 100%;
+  overflow: hidden;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.partner-carousel {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.partner-carousel img {
+  margin: 0 40px;
+}
+
+.partner-item {
+  flex: 0 0 auto;
+}
+
+.partner-logo {
+  overflow: hidden;
+  padding: 60px 0;
+  background: white;
+  white-space: nowrap;
+  position: relative;
+  width: 150px;
+}
+
+.partner-logo:before,
+.partner-logo:after {
+  display: none;
+}
 
 body
   > div
@@ -2427,4 +2533,77 @@ body
   > div.disclaimer {
   text-align: start;
 }
+.lugar,
+#w-node-fe90d0db-785a-a01f-133e-64a63ec3aa87-3863c98b
+  > div.location-item-content-wrapper
+  > div
+  > h4.heading-style-h5.fs-5,
+#w-node-fe90d0db-785a-a01f-133e-64a63ec3aa87-3863c98b
+  > div.location-item-content-wrapper
+  > div
+  > h4:nth-child(2) {
+  font-weight: 400 !important;
+}
 
+/* slider patrocinadores */
+.slider-patrocinadores {
+  border: 10px solid #f4f4f6;
+  border-radius: 0.6rem;
+  position: relative;
+  /* width: 100%; */
+  overflow: hidden;
+  display: flex;
+  align-items: center; /* Centrar verticalmente */
+}
+
+.slider-patrocinadores__wrapper {
+  display: flex;
+  gap: 200px;
+  width: calc(100% * 10); /* elementos duplicados */
+  animation: scroll 30s linear infinite;
+}
+
+@keyframes scroll {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(calc(-100% / 2));
+  }
+}
+
+.slider-patrocinadores__slide {
+  min-width: calc(100% / 50); /* ancho de cada slider */
+  transition: transform 1s ease-in-out;
+  display: flex;
+  align-items: center; /* Centrar verticalmente dentro del slide */
+}
+
+.slider-patrocinadores__slide img {
+  vertical-align: center;
+  min-width: 200px;
+  max-width: 250px;
+  width: 200px;
+
+  /* object-fit: contain;
+  border-radius: 10px; */
+}
+
+.boton {
+  border: 2px solid black;
+  background-color: white;
+  color: #1e3a44;
+  padding: 14px 28px;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+.pago {
+  border-color: #fff;
+  color: #1e3a44;
+}
+
+.pago:hover {
+  background-color: transparent;
+  color: #fff;
+}
