--- a/styles/custom.css
+++ b/styles/custom.css
@@ -1464,58 +1464,14 @@ button:disabled {
     left: 0;
     width: 50%;
     transform: translateY(20%) translateX(-40%);
+    transition: transform 1s ease-in-out;
   }
   .navbar-toggler-icon {
     float: none;
     margin: 0 auto;
   }
-
   .navbar-collapse {
-    overflow: hidden;
-    max-height: 0;
-    transition: max-height 1s ease-in-out;
     padding-bottom: 20px;
-  }
-
-  .header {
-    background-color: #f8f9fa;
-    padding: 10px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  }
-
-  .navbar-toggler {
-    background: none;
-    border: none;
-    font-size: 1.5em;
-    cursor: pointer;
-  }
-
-  .navbar-collapse.show {
-    transition: max-height 1s ease-in-out;
-  }
-
-  .navbar-nav {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-  }
-
-  .nav-item {
-    margin: 10px 0;
-  }
-
-  .nav-link {
-    text-decoration: none;
-    color: #000;
-    font-size: 1.25em;
-  }
-
-  .nav-link:hover {
-    text-decoration: underline;
-  }
-
-  .botonHeader {
-    margin-left: 20px;
   }
 }
 .countdown-container {
@@ -2471,4 +2427,3 @@ body
   > div.disclaimer {
   text-align: start;
 }
-
