--- a/styles/pagina.css
+++ b/styles/pagina.css
@@ -614,13 +614,23 @@ body
   display: grid;
 }
 .speaker-collection-list {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
   grid-column-gap: 0.7rem;
   grid-row-gap: 0.7rem;
-  grid-template-rows: auto auto;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  grid-auto-columns: 1fr;
-  display: grid;
 }
+
+
+/* Centrar las filas con menos de 4 elementos */
+.speaker-collection-list:has(> :nth-last-child(-n+3):nth-child(4n+1)) {
+  justify-content: start; /* Ajusta esto según el comportamiento deseado */
+}
+
+.speaker-collection-list:has(> :nth-last-child(1):nth-child(4n+1)) {
+  justify-content: start; /* Ajusta esto según el comportamiento deseado */
+}
+
+
 @media (max-width: 530px) {
   .text-bio {
     font-size: 0.8rem;
