--- a/styles/pagina.css
+++ b/styles/pagina.css
@@ -613,22 +613,27 @@ body
   align-items: center;
   display: grid;
 }
+
 .speaker-collection-list {
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-column-gap: 0.7rem;
+  grid-template-columns: repeat(4, 1fr); /* 4 columnas */
+  grid-column-gap: 1rem;
   grid-row-gap: 0.7rem;
 }
 
+/* .speaker-collection-item {
+  box-sizing: border-box;
+} */
 
-/* Centrar las filas con menos de 4 elementos */
-.speaker-collection-list:has(> :nth-last-child(-n+3):nth-child(4n+1)) {
-  justify-content: start; /* Ajusta esto según el comportamiento deseado */
-}
+/* .speaker-collection-list > :nth-last-child(1):nth-child(4n+1),
+.speaker-collection-list > :nth-last-child(2):nth-child(4n+1),
+.speaker-collection-list > :nth-last-child(3):nth-child(4n+1) {
+  grid-column-start: span 2; 
+  display: flex;
+  justify-content: center;
+} */
 
-.speaker-collection-list:has(> :nth-last-child(1):nth-child(4n+1)) {
-  justify-content: start; /* Ajusta esto según el comportamiento deseado */
-}
+
 
 
 @media (max-width: 530px) {
@@ -2214,13 +2219,21 @@ body
   align-items: center;
   background-color: red;
   color: white;
-  width: 26%;
+  width: 20%;
   text-align: center;
   padding: 4px 100px;
   border-radius: 4px;
-  font-size: 12px;
+  font-size: 20px;
   z-index: 1000;
 }
+
+@media (min-width: 1024px) {
+  .error-popover {
+      width: 26%;
+      padding: 4px 100px;
+  }
+}
+
 
 .pagos.active {
   visibility: visible;
