--- a/styles/index.css
+++ b/styles/index.css
@@ -2743,10 +2743,10 @@ body
 
 .popop-content {
     background-color: #fff;
-    padding: 24px 32px 51px;
+    padding: 32px 32px 0 32px;
     border-radius: 16px;
     width: 80%;
-    max-width: 500px;
+    max-width: 800px;
     box-shadow: 0 15px 30px 0 rgba(0, 0, 0, 0.25);
     position: relative;
     overflow-y: auto;
@@ -2782,7 +2782,7 @@ body
     border-bottom: 1px solid #ddd;
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
 }
 
 /* Título del Popup */
@@ -2806,7 +2806,7 @@ body
     padding: 20px 32px;
     display: flex;
     align-items: center;
-    justify-content: flex-end;
+    justify-content: center;
     border-top: 1px solid #ddd;
     gap: 12px;
     position: relative;
