--- a/styles/index.css
+++ b/styles/index.css
@@ -1370,6 +1370,10 @@ button {
   box-shadow: 0 4px 5.5px 0 rgba(0, 0, 0, 0.07);
   width: 100%;
 }
+
+#volverBtn {
+  color: white !important;
+}
 .inside-circle,
 .spinner,
 .spinner:after,
