--- a/styles/fix.css
+++ b/styles/fix.css
@@ -1,3 +1,7 @@
 .margin-bottom {
     margin-bottom: 50px; /* Ajusta el valor como desees */
   }
+
+  #comprarEntrada{
+    background-color: #fff;
+  }
